--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
     background: #E0FFFF;
-     }
-h1 {
+}
+hi {
     text-align: center;
-   }
+}
 p {
     text-align: center;
-  }
+}
 em strong {
     color: PowderBlue;
-          }
+}
