--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-background: #E0FFFF;
+    background: #87CEFA;
 }
 hi {
-text-align: center;
+    text-align: center;
 }
 p {
-text-align: center;
+    text-aling: center;
 }
 em strong {
-color: PowderBlue
+    color: LightSkyBlue
 }
