--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background: #87CEFA;
+background:#00BFFF;
 }
 h1 {
 text-align: center;
@@ -8,5 +8,5 @@ p {
 text-align: center;
 }
 em strong {
-color: LightSkyBlue;
+color: RoyalBlue;
 }
